Aded more emojies to Romanian
I also translated a section i forgot am updated sole translations

--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -14,14 +14,14 @@
     <string name="remove_from_playlist">Elimină din lista de ascultare</string>
     <string name="hide">Ascunde</string>
     <string name="hide_from_quick_picks">Ascunde din \"Selecții rapide\"</string>
-    <string name="related_albums">Albume similare</string>
-    <string name="similar_artists">Artiști similari</string>
-    <string name="playlists_you_might_like">Liste de ascultare care ți-ar putea plăcea</string>
+    <string name="related_albums">💿 Albume similare</string>
+    <string name="similar_artists">👥 Artiști similari</string>
+    <string name="playlists_you_might_like">💖 Liste de ascultare care ți-ar putea plăcea</string>
     <string name="an_error_has_occurred">A apărut o eroare</string>
     <string name="albums">Albume</string>
     <string name="artists">Artiști</string>
     <string name="enter_the_playlist_name">Introdu numele listei de ascultare</string>
-    <string name="playlists">Liste de ascultare</string>
+    <string name="playlists">🔁 Liste de ascultare</string>
     <string name="favorites">Favorite</string>
     <string name="quick_picks">Selecții rapide</string>
     <string name="songs">Melodii</string>
@@ -152,7 +152,7 @@
     <string name="error_this_song_cannot_be_played_due_to_server_restrictions">Această melodie nu poate fi redată din cauza restricțiilor serverilor</string>
     <string name="error_the_returned_video_id_doesn_t_match_the_requested_one">ID-ul videoclipului întors nu se potrivește cu cel solicitat</string>
     <string name="error_an_unknown_playback_error_has_occurred">A apărut o eroare de ascultare necunoscută</string>
-    <string name="tips">Recomandări</string>
+    <string name="tips">✨ Recomandări</string>
     <string name="quick_pics_and_tips">Recomandări și Selecții rapide</string>
     <string name="is_min_list_time_for_tips_or_quick_pics">Este timpul minim de ascultat pentru a include melodia ca Sfat sau Selecție rapidă</string>
     <string name="min_listening_time">Timp minim de ascultare</string>
@@ -178,10 +178,10 @@
     <string name="_6_month">6 Luni</string>
     <string name="_1_year">Un An</string>
     <string name="all">Total</string>
-    <string name="most_played_songs">Melodiile cele mai ascultate</string>
-    <string name="most_listened_artists">Most listened artists</string>
-    <string name="most_albums_listened">Most albums listened</string>
-    <string name="most_played_playlists">Most played playlists</string>
+    <string name="most_played_songs">🎵 Melodiile cele mai ascultate</string>
+    <string name="most_listened_artists">👥 Artiști cei mai ascultați</string>
+    <string name="most_albums_listened">💿 Albumurile cei mai ascultați</string>
+    <string name="most_played_playlists">🔁 Listele cele mai ascultate</string>
     <string name="languages">🌍 LIMBĂ</string>
     <string name="app_language">Limba aplicației</string>
     <string name="in_alphabetical_order">In ordinea alfabetică:</string>
@@ -198,10 +198,10 @@
     <string name="russian">Rusă (Русский)</string>
     <string name="turkish">Turcă (Türkçe)</string>
     <string name="polish">Poloneză (Polski)</string>
-    <string name="dark">Intuneric</string>
-    <string name="system">Sistem</string>
+    <string name="dark">Intunecat ⚫</string>
+    <string name="system">Sistem ⚙️</string>
     <string name="unlimited">Nelimitat</string>
-    <string name="_light">Lumină</string>
+    <string name="_light">Luminos ⚪</string>
     <string name="downloaded">Descărcate</string>
     <string name="turn_off">Opriți</string>
     <string name="download">Descarcă</string>
@@ -209,8 +209,8 @@
     <string name="dynamic">Dinamic</string>
     <string name="discovery">Descoperiri</string>
     <string name="mood">Stare</string>
-    <string name="new_albums">Albumuri noi</string>
-    <string name="moods_and_genres">Stare și Genuri</string>
+    <string name="new_albums">🆕 Albumuri noi</string>
+    <string name="moods_and_genres">😁 Stare și Genuri</string>
     <string name="search_queries">" căutare"</string>
     <string name="not_find_battery_optimization_settings">Nu s-au putut găsi setările de optimizare al bateriei, vă rugăm să adăugați manual în lista albă</string>
     <string name="search">Caută...</string>
