Aded last emojies for Romanian
No more emojies maybe

--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -161,12 +161,12 @@
     <string name="size_name">Dimensiune</string>
     <string name="current_size_name">"Dimensiunea curentă "</string>
     <string name="current_shape_name">Formă curentă</string>
-    <string name="small">Mic</string>
-    <string name="medium">Mediu</string>
-    <string name="big">Mare</string>
-    <string name="none">Nici unul</string>
-    <string name="light">Leger</string>
-    <string name="heavy">Foarte mare</string>
+    <string name="small">Mic ◾</string>
+    <string name="medium">Mediu ◼️</string>
+    <string name="big">Mare ⬛</string>
+    <string name="none">Nici unul ❌</string>
+    <string name="light">Leger ◾</string>
+    <string name="heavy">Mare ⬛</string>
     <string name="effects">✨ EFECTE</string>
     <string name="player_rotating_buttons">Butoane rotative</string>
     <string name="player_enable_rotation_buttons">Activați rotația butoanelor când se face clic pe ele</string>
@@ -205,8 +205,8 @@
     <string name="downloaded">Descărcate</string>
     <string name="turn_off">Opriți</string>
     <string name="download">Descarcă</string>
-    <string name="_default">Implicit</string>
-    <string name="dynamic">Dinamic</string>
+    <string name="_default">Implicit ▶️</string>
+    <string name="dynamic">Dinamic 🎵</string>
     <string name="discovery">Descoperiri</string>
     <string name="mood">Stare</string>
     <string name="new_albums">🆕 Albumuri noi</string>
