--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -188,16 +188,16 @@
     <string name="contributors">🤝 CONTRIBUITORI</string>
     <string name="troubleshooting">🔧 DEPANARE</string>
     <string name="social">💬 SOCIAL</string>
-    <string name="english">Engleză (English)</string>
-    <string name="italian">Italiană (Italiano)</string>
-    <string name="czech">Cehă (Čeština)</string>
-    <string name="german">Germană (Deutsch)</string>
-    <string name="spanish">Spaniolă (Español)</string>
-    <string name="french">Franceză (Français)</string>
-    <string name="romanian">Română (SELECȚIONAT)</string>
-    <string name="russian">Rusă (Русский)</string>
-    <string name="turkish">Turcă (Türkçe)</string>
-    <string name="polish">Poloneză (Polski)</string>
+    <string name="english">Engleză (English) 🇺🇸</string>
+    <string name="italian">Italiană (Italiano) 🇮🇹</string>
+    <string name="czech">Cehă (Čeština) 🇨🇿</string>
+    <string name="german">Germană (Deutsch) 🇩🇪</string>
+    <string name="spanish">Spaniolă (Español) 🇪🇸</string>
+    <string name="french">Franceză (Français) 🇫🇷</string>
+    <string name="romanian">Română (SELECȚIONAT) 🇷🇴</string>
+    <string name="russian">Rusă (Русский) 🇷🇺</string>
+    <string name="turkish">Turcă (Türkçe) 🇹🇷</string>
+    <string name="polish">Poloneză (Polski) 🇵🇱</string>
     <string name="dark">Intunecat ⚫</string>
     <string name="system">Sistem ⚙️</string>
     <string name="unlimited">Nelimitat</string>
