Patched a big mistake in Romanian
Juste pulled that way i d'ont forget

--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -180,7 +180,7 @@
     <string name="all">Total</string>
     <string name="most_played_songs">🎵 Melodiile cele mai ascultate</string>
     <string name="most_listened_artists">👥 Artiști cei mai ascultați</string>
-    <string name="most_albums_listened">💿 Albumurile cei mai ascultați</string>
+    <string name="most_albums_listened">💿 Albumurile cele mai ascultate</string>
     <string name="most_played_playlists">🔁 Listele cele mai ascultate</string>
     <string name="languages">🌍 LIMBĂ</string>
     <string name="app_language">Limba aplicației</string>
