--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -229,4 +229,12 @@
     <string name="toggle_lyrics">Mostrar la letra</string>
     <string name="by_tapping_on_the_thumbnail">Al pulsar en la miniatura</string>
     <string name="require_mic_permission">El efecto de visualizador requiere el permiso de micrófono. Por favor, concédelo.</string>
+    <string name="vt_fancy">Fancy</string>
+    <string name="vt_circular">Circular</string>
+    <string name="vt_disabled">Disabled</string>
+    <string name="vt_stacked">Stacked</string>
+    <string name="vt_one_side">One side</string>
+    <string name="vt_double_side">Double side</string>
+    <string name="vt_double_side_circular">Double side circular</string>
+    <string name="vt_full">Full</string>
 </resources>
