Added new albums from preferites artists on discovery and quick pics pages #20

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -237,4 +237,5 @@
         <string name="vt_double_side">Double side</string>
         <string name="vt_double_side_circular">Double side circular</string>
         <string name="vt_full">Full</string>
+    <string name="new_albums_of_your_artists">New albums of your artists</string>
 </resources>
