--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -238,4 +238,5 @@
         <string name="vt_double_side_circular">Double side circular</string>
         <string name="vt_full">Full</string>
     <string name="new_albums_of_your_artists">New albums of your artists</string>
+    <string name="timeline">Timeline</string>
 </resources>
