--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -239,6 +239,8 @@
     <string name="vt_full">Barre</string>
     <string name="new_albums_of_your_artists">Nuovi album dei tuoi artisti</string>
     <string name="timeline">Timeline</string>
-    <string name="song_cache_by_player">SONG CACHE (by Player)</string>
-    <string name="song_cache_by_download">SONG CACHE (by Download)</string>
+    <string name="song_cache_by_player">CACHE BRANI (Player)</string>
+    <string name="song_cache_by_download">CACHE BRANI (Download)</string>
+    <string name="visualizer">Visualizer</string>
+    <string name="visualizer_require_mic_permission">Visualizer RICHIEDE ACCESSO AL MICROFONO</string>
 </resources>
