--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -241,4 +241,6 @@
     <string name="timeline">Timeline</string>
     <string name="song_cache_by_player">SONG CACHE (by Player)</string>
         <string name="song_cache_by_download">SONG CACHE (by Download)</string>
+    <string name="visualizer">Visualizer</string>
+        <string name="visualizer_require_mic_permission">Visualizer REQUIRE MIC PERMISSION</string>
 </resources>
