Delete gesture on queue is now disabled if queue locked Queue locked is now remembered  #148

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -243,4 +243,5 @@
         <string name="song_cache_by_download">SONG CACHE (by Download)</string>
     <string name="visualizer">Visualizer</string>
         <string name="visualizer_require_mic_permission">Visualizer REQUIRE MIC PERMISSION</string>
+    <string name="restart_app_please">Restart app please.</string>
 </resources>
