Updated changed some translation and emojies
Updated changed some translation and emojies

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -15,11 +15,11 @@
     <string name="hide">Cacher</string>
     <string name="hide_from_quick_picks">Cacher de la \"Sélections rapides\"</string>
     <string name="related_albums">💿 Albums associés</string>
-    <string name="similar_artists">👤 Artistes similaires</string>
+    <string name="similar_artists">👥 Artistes similaires</string>
     <string name="playlists_you_might_like">💜 Listes de lecture que vous pourriez aimer</string>
     <string name="an_error_has_occurred">❌ Une erreur est survenue</string>
     <string name="albums">💿 Albums</string>
-    <string name="artists">👤 Artistes</string>
+    <string name="artists">👥 Artistes</string>
     <string name="enter_the_playlist_name">Entrez le nom de la playlist</string>
     <string name="playlists">🔀 Playlists</string>
     <string name="favorites">❤ Favoris</string>
@@ -63,12 +63,12 @@
     <string name="you_will_be_redirected_to_github">Vous allez être redirigé vers GitHub</string>
     <string name="request_a_feature_or_suggest_an_idea">Demander une fonctionnalité\nou suggérer une idée</string>
     <string name="appearance">🎨 Apparence</string>
-    <string name="colors">💚 COULEURS</string>
+    <string name="colors">🖌️ Thèmes</string>
     <string name="theme">Thème</string>
     <string name="theme_mode">Thème Système</string>
-    <string name="shapes">🛑 Arrondissement des coins</string>
+    <string name="shapes">📐 Forme</string>
     <string name="thumbnail_roundness">Aspect</string>
-    <string name="text">🆎 TEXTE</string>
+    <string name="text">🔤 Texte</string>
     <string name="use_system_font">Utiliser la police du système</string>
     <string name="use_font_by_the_system">Utiliser la police appliquée par le système</string>
     <string name="apply_font_padding">Appliquer un remplissage</string>
@@ -78,7 +78,7 @@
     <string name="use_song_cover_on_lockscreen">Afficher la pochette d\'album sur le fond d\'écran de l\'écran de vérrouillage</string>
     <string name="cache">🗃 Cache</string>
     <string name="cache_cleared">Lorsque le cache manque d\'espace, les ressources en cache les moins récemment consultées seront effacées</string>
-    <string name="image_cache">🖼 CACHE D\'IMAGE</string>
+    <string name="image_cache">🖼️ CACHE D\'IMAGE</string>
     <string name="max_size">Taille max</string>
     <string name="song_cache">🎶 CACHE DES CHANSONS</string>
     <string name="database">🗄 Base de données</string>
@@ -160,11 +160,11 @@
     <string name="restarting_rimusic_is_required">Un redémarrage est requis pour pouvoir l\'appliquer !</string>
     <string name="size_name">Taille</string>
     <string name="current_size_name">"Taille de la pochette d\'album actuelle"</string>
-    <string name="current_shape_name">⚫ Arrondissement des coins actuel</string>
+    <string name="current_shape_name">Arrondissement des coins actuel</string>
     <string name="small">◾ Petit</string>
     <string name="medium">◼️ Moyen</string>
     <string name="big">⬛ Grand</string>
-    <string name="none">🙅‍♂️ Aucun</string>
+    <string name="none">❌ Aucun</string>
     <string name="light">◾ Légé</string>
     <string name="heavy">⬛ Énorme</string>
     <string name="effects">🌟 EFFETS</string>
@@ -179,10 +179,10 @@
     <string name="_1_year">📊 1 an</string>
     <string name="all">📂 Tout</string>
     <string name="most_played_songs">🎶 Chansons les plus écoutées</string>
-    <string name="most_listened_artists">👤 Artistes les plus écoutés</string>
+    <string name="most_listened_artists">👥 Artistes les plus écoutés</string>
     <string name="most_albums_listened">💿 Albums les plus écoutés</string>
     <string name="most_played_playlists">🔀 Playlists les plus écoutées</string>
-    <string name="languages">🇪🇺 Langues</string>
+    <string name="languages">🌍 Langues</string>
     <string name="app_language">Langues de l\'application</string>
     <string name="in_alphabetical_order">Dans l\'ordre alphabétique :</string>
     <string name="contributors">❤ CONTRIBUTEURS</string>
@@ -205,7 +205,7 @@
     <string name="downloaded">✈️ Musiques\nTéléchargé</string>
     <string name="turn_off">Desactivé</string>
     <string name="download">⬇️ Télécharger</string>
-    <string name="_default">⚙️ Par défaut</string>
+    <string name="_default">⚙▶️ Par défaut</string>
     <string name="dynamic">🎶 Dynamique</string>
     <string name="no">Non</string>
     <string name="stop">Stop</string>
