Update Spanish translation

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -229,19 +229,19 @@
     <string name="toggle_lyrics">Mostrar la letra</string>
     <string name="by_tapping_on_the_thumbnail">Al pulsar en la miniatura</string>
     <string name="require_mic_permission">El efecto de visualizador requiere el permiso de micrófono. Por favor, concédelo.</string>
-    <string name="vt_fancy">Fancy</string>
+    <string name="vt_fancy">Adornado</string>
     <string name="vt_circular">Circular</string>
-    <string name="vt_disabled">Disabled</string>
-    <string name="vt_stacked">Stacked</string>
-    <string name="vt_one_side">One side</string>
-    <string name="vt_double_side">Double side</string>
-    <string name="vt_double_side_circular">Double side circular</string>
-    <string name="vt_full">Full</string>
-    <string name="new_albums_of_your_artists">New albums of your artists</string>
-    <string name="timeline">Timeline</string>
-    <string name="song_cache_by_player">SONG CACHE (by Player)</string>
-    <string name="song_cache_by_download">SONG CACHE (by Download)</string>
-    <string name="visualizer">Visualizer</string>
-    <string name="visualizer_require_mic_permission">Visualizer REQUIRE MIC PERMISSION</string>
-    <string name="restart_app_please">Restart app please.</string>
+    <string name="vt_disabled">Desactivado</string>
+    <string name="vt_stacked">Apilado</string>
+    <string name="vt_one_side">Una cara</string>
+    <string name="vt_double_side">Dos caras</string>
+    <string name="vt_double_side_circular">Circular a dos caras</string>
+    <string name="vt_full">Completo</string>
+    <string name="new_albums_of_your_artists">Nuevos álbumes de tus artistas</string>
+    <string name="timeline">Línea de progreso</string>
+    <string name="song_cache_by_player">CACHÉ DE CANCIONES (por el reproductor)</string>
+    <string name="song_cache_by_download">CACHÉ DE CANCIONES (por las descargas)</string>
+    <string name="visualizer">Visualizador</string>
+    <string name="visualizer_require_mic_permission">El visualizador REQUIERE EL PERMISO DE MICRÓFONO</string>
+    <string name="restart_app_please">Por favor, reinicia la aplicación.</string>
 </resources>
