--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -110,7 +110,7 @@
     <string name="invincible_service">Service protégé</string>
     <string name="turning_off_battery_optimizations_is_not_enough">Quand \"désactiver les optimisations de la batterie\" ne suffit pas</string>
     <string name="player_audio"><![CDATA[Player & Audio]]></string>
-    <string name="player">⏯ Lecteur</string>
+    <string name="player">⏭ Lecteur</string>
     <string name="persistent_queue">Playlist persistante</string>
     <string name="save_and_restore_playing_songs">Enregistrer et restaurer la lecture des chansons</string>
     <string name="resume_playback">Reprendre la lecture</string>
@@ -121,7 +121,7 @@
     <string name="loudness_normalization">Normalisation du volume</string>
     <string name="autoadjust_the_volume">Régler le volume à un niveau fixe</string>
     <string name="interact_with_the_system_equalizer">Paramètre de l\'égaliseur du système</string>
-    <string name="about">ℹ À propos</string>
+    <string name="about">👨‍💻 À propos</string>
     <string name="more_of">Plus de</string>
     <string name="sleep_timer">Minuterie d\'arrêt</string>
     <string name="left">%1$s restantes</string>
@@ -153,7 +153,7 @@
     <string name="error_the_returned_video_id_doesn_t_match_the_requested_one">🎥 L\'identifiant vidéo retourné ne correspond pas à celui demandé</string>
     <string name="error_an_unknown_playback_error_has_occurred">❌ Une erreur de lecture inconnue s\'est produite, si le problème persiste signalé le problème</string>
     <string name="tips">✨ Recommandations</string>
-    <string name="quick_pics_and_tips">✨ Sélection rapide et recommandations</string>
+    <string name="quick_pics_and_tips">Sélection rapide et recommandations</string>
     <string name="is_min_list_time_for_tips_or_quick_pics">C\'est la durée d\'écoute minimale pour inclure la chanson comme une suggestion possible pour la sélection rapide et les recommandations</string>
     <string name="min_listening_time">Durée d\'écoute minimale</string>
     <string name="player_thumbnail_size">Taille de la pochette d\'album</string>
@@ -161,12 +161,12 @@
     <string name="size_name">Taille</string>
     <string name="current_size_name">"Taille de la pochette d\'album actuelle"</string>
     <string name="current_shape_name">Arrondissement des coins actuel</string>
-    <string name="small">◾ Petit</string>
-    <string name="medium">◼️ Moyen</string>
-    <string name="big">⬛ Grand</string>
-    <string name="none">❌ Aucun</string>
-    <string name="light">◾ Légé</string>
-    <string name="heavy">⬛ Énorme</string>
+    <string name="small">Petit</string>
+    <string name="medium">Moyen</string>
+    <string name="big">Grand</string>
+    <string name="none">Aucun</string>
+    <string name="light">Légé</string>
+    <string name="heavy">Énorme</string>
     <string name="effects">🌟 EFFETS</string>
     <string name="player_rotating_buttons">Boutons rotatifs</string>
     <string name="player_enable_rotation_buttons">Autorise la rotation des boutons lorsqu\'ils sont cliqués</string>
@@ -185,7 +185,7 @@
     <string name="languages">🌍 Langues</string>
     <string name="app_language">Langues de l\'application</string>
     <string name="in_alphabetical_order">Dans l\'ordre alphabétique :</string>
-    <string name="contributors">❤ CONTRIBUTEURS</string>
+    <string name="contributors">💞 CONTRIBUTEURS</string>
     <string name="troubleshooting">🔧 DÉPANNAGE</string>
     <string name="social">💬 SOCIAL</string>
     <string name="english">Anglais (English)</string>
@@ -198,18 +198,18 @@
     <string name="russian">Russe (Русский)</string>
     <string name="turkish">Turc (Türkçe)</string>
     <string name="polish">Polonais (Polski)</string>
-    <string name="dark">⚫ Sombre</string>
-    <string name="system">⚙️ Système</string>
+    <string name="dark">Sombre</string>
+    <string name="system">Système</string>
     <string name="unlimited">Illimité</string>
-    <string name="_light">⚪ Clair</string>
-    <string name="downloaded">✈️ Musiques\nTéléchargé</string>
+    <string name="_light">Clair</string>
+    <string name="downloaded">✈️ Téléchargé</string>
     <string name="turn_off">Desactivé</string>
     <string name="download">⬇️ Télécharger</string>
-    <string name="_default">⚙▶️ Par défaut</string>
-    <string name="dynamic">🎶 Dynamique</string>
+    <string name="_default">Par défaut</string>
+    <string name="dynamic">Dynamique</string>
     <string name="no">Non</string>
     <string name="stop">Stop</string>
-    <string name="preferences">👁 PREFERENCES</string>
+    <string name="preferences">👀 PREFERENCES</string>
     <string name="discovery">🌍 Découvrir</string>
     <string name="mood">Humeur</string>
     <string name="new_albums">🆕 Nouveaux albums</string>
@@ -223,25 +223,25 @@
     <string name="on_device">📲 Sur l\'appareil</string>
     <string name="open_settings">Ouvrir les paramètres</string>
     <string name="permission_declined_grant_media_permissions">🎥 Autorisation refusée, veuillez accorder les autorisations multimédias dans les paramètres de votre appareil</string>
-    <string name="wavy_timeline">Barre de navigation ondulée</string>    
+    <string name="wavy_timeline">Ondulée</string>    
     <string name="enable_wavy_timeline">Active la barre de navigation ondulée</string>
     <string name="play_next">Musique suivante</string>
     <string name="toggle_lyrics">Afficher les paroles</string>
     <string name="by_tapping_on_the_thumbnail">En appuyant sur la pochette d\'album</string>
     <string name="require_mic_permission">🎙 Le visualiser nécessite l\'autorisation du micro</string>
-    <string name="vt_fancy">Fancy</string>
-    <string name="vt_circular">Circular</string>
-    <string name="vt_disabled">Disabled</string>
-    <string name="vt_stacked">Stacked</string>
-    <string name="vt_one_side">One side</string>
-    <string name="vt_double_side">Double side</string>
-    <string name="vt_double_side_circular">Double side circular</string>
-    <string name="vt_full">Full</string>
-    <string name="new_albums_of_your_artists">New albums of your artists</string>
-    <string name="timeline">Timeline</string>
-    <string name="song_cache_by_player">SONG CACHE (by Player)</string>
-    <string name="song_cache_by_download">SONG CACHE (by Download)</string>
-    <string name="visualizer">Visualizer</string>
-    <string name="visualizer_require_mic_permission">Visualizer REQUIRE MIC PERMISSION</string>
-    <string name="restart_app_please">Restart app please.</string>
+    <string name="vt_fancy">Circulaire 3D</string>
+    <string name="vt_circular">Circulaire</string>
+    <string name="vt_disabled">Désactivé</string>
+    <string name="vt_stacked">Empilé</string>
+    <string name="vt_one_side">D\'un côté</string>
+    <string name="vt_double_side">Des deux côté</string>
+    <string name="vt_double_side_circular">Des deux côté et circulaire</string>
+    <string name="vt_full">Complet</string>
+    <string name="new_albums_of_your_artists">Nouveaux albums de vos artistes</string>
+    <string name="timeline">Barre de navigation</string>
+    <string name="song_cache_by_player">⏭ CACHE DE CHANSON (Pour le lecteur)</string>
+    <string name="song_cache_by_download">✈️ CACHE DE CHANSON (Pour le télechargement)</string>
+    <string name="visualizer">Visualiseur</string>
+    <string name="visualizer_require_mic_permission">Visualiseur exige L\'AUTORISATION DU MICRO</string>
+    <string name="restart_app_please">🔁 Redémarrez l'application s\'il vous plaît</string>
 </resources>
