--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -51,7 +51,7 @@
     <string name="size">🗃 Taille</string>
     <string name="cached">📂 En cache</string>
     <string name="loudness">🔊 Volume</string>
-    <string name="clear">✏ Effacer</string>
+    <string name="clear">🖍 Effacer</string>
     <string name="error">❌ Une erreur est survenue</string>
     <string name="enter_a_name">🔎 Rechercher</string>
     <string name="online">🌐 En ligne</string>
