--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -243,5 +243,5 @@
     <string name="song_cache_by_download">✈️ CACHE DE CHANSON (Pour le télechargement)</string>
     <string name="visualizer">Visualiseur</string>
     <string name="visualizer_require_mic_permission">Visualiseur exige L\'AUTORISATION DU MICRO</string>
-    <string name="restart_app_please">🔁 Redémarrez l'application s\'il vous plaît</string>
+    <string name="restart_app_please">🔃 Redémarrez l'application</string>
 </resources>
