--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -193,7 +193,7 @@
     <string name="czech">Tchèque (Čeština)</string>
     <string name="german">Allemand (Deutsch)</string>
     <string name="spanish">Espagnol (Español)</string>
-    <string name="french">👉 Français avec emojies</string>
+    <string name="french">👉 Français</string>
     <string name="romanian">Roumain (Română)</string>
     <string name="russian">Russe (Русский)</string>
     <string name="turkish">Turc (Türkçe)</string>
