--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -14,14 +14,14 @@
     <string name="remove_from_playlist">Elimină din lista de ascultare</string>
     <string name="hide">Ascunde</string>
     <string name="hide_from_quick_picks">Ascunde din \"Selecții rapide\"</string>
-    <string name="related_albums">💿 Albume similare</string>
-    <string name="similar_artists">👥 Artiști similari</string>
-    <string name="playlists_you_might_like">💖 Liste de ascultare care ți-ar putea plăcea</string>
+    <string name="related_albums">Albume similare</string>
+    <string name="similar_artists">Artiști similari</string>
+    <string name="playlists_you_might_like">Liste de ascultare care ți-ar putea plăcea</string>
     <string name="an_error_has_occurred">A apărut o eroare</string>
     <string name="albums">Albume</string>
     <string name="artists">Artiști</string>
     <string name="enter_the_playlist_name">Introdu numele listei de ascultare</string>
-    <string name="playlists">🔁 Liste de ascultare</string>
+    <string name="playlists">Liste de ascultare</string>
     <string name="favorites">Favorite</string>
     <string name="quick_picks">Selecții rapide</string>
     <string name="songs">Melodii</string>
@@ -63,12 +63,12 @@
     <string name="you_will_be_redirected_to_github">Vei fi redirecționat către GitHub</string>
     <string name="request_a_feature_or_suggest_an_idea">Solicită o funcție sau sugerează o idee</string>
     <string name="appearance">Aspect</string>
-    <string name="colors">🎨 TEMURI</string>
+    <string name="colors">TEMURI</string>
     <string name="theme">Temă</string>
     <string name="theme_mode">Culoare temă</string>
-    <string name="shapes">📐 FORME</string>
+    <string name="shapes">FORME</string>
     <string name="thumbnail_roundness">Rotunjimea miniaturilor</string>
-    <string name="text">🔤 TEXT</string>
+    <string name="text">TEXT</string>
     <string name="use_system_font">Utilizează fontul sistemului</string>
     <string name="use_font_by_the_system">Utilizează fontul utilizat de sistem</string>
     <string name="apply_font_padding">Aplică spațiere între fonturi</string>
@@ -78,30 +78,30 @@
     <string name="use_song_cover_on_lockscreen">Utilizează coperta melodiei ca fundal pentru ecranul de blocare</string>
     <string name="cache">Cache</string>
     <string name="cache_cleared">Când memoria cache rămâne fără spațiu, resursele care nu au fost accesate de mult timp sunt șterse</string>
-    <string name="image_cache">🖼️ CACHE IMAGINI</string>
+    <string name="image_cache">CACHE IMAGINI</string>
     <string name="max_size">Dimensiune maximă</string>
-    <string name="song_cache">🎵 CACHE MELODII</string>
+    <string name="song_cache">CACHE MELODII</string>
     <string name="database">Bază de date</string>
     <string name="reset_quick_picks">Resetează selecțiile rapide</string>
     <string name="quick_picks_are_cleared">Selecțiile rapide au fost resetate</string>
-    <string name="backup">💾 COPIE DE REZERVĂ</string>
+    <string name="backup">COPIE DE REZERVĂ</string>
     <string name="personal_preference">Preferințe personale (de ex: Culoare temă) memoria cache este exclusă.</string>
     <string name="backup_1">Copie de rezervă</string>
     <string name="export_the_database">Exportează baza de date pe stocarea externă</string>
-    <string name="restore">⏬ RESTABILIRE</string>
+    <string name="restore">RESTABILIRE</string>
     <string name="restore_1">Restaurează</string>
     <string name="import_the_database">Importă baza de date din stocarea externă</string>
     <string name="other">Altele</string>
-    <string name="android_auto">🚘 ANDROID AUTO</string>
+    <string name="android_auto">ANDROID AUTO</string>
     <string name="enable_unknown_sources">Amintiți-vă să activați \"Surse necunoscute\" în Setările dezvoltator din Android Auto.</string>
     <string name="android_auto_1">Android Auto</string>
     <string name="enable_android_auto_support">Activează suportul pentru Android Auto</string>
-    <string name="search_history">🔎 ISTORICUL CĂUTĂRILOR</string>
+    <string name="search_history">ISTORICUL CĂUTĂRILOR</string>
     <string name="pause_search_history">Pauză pentru istoricul căutărilor</string>
     <string name="neither_save_new_searched_query">Nu salva noile căutări și nu se va afișa istoricul</string>
     <string name="clear_search_history">Șterge istoricul căutărilor</string>
     <string name="history_is_empty">Istoricul este gol</string>
-    <string name="service_lifetime">🕗 DURATA DE VIAȚĂ A SERVICILOR</string>
+    <string name="service_lifetime">DURATA DE VIAȚĂ A SERVICILOR</string>
     <string name="battery_optimizations_applied">Dacă sunt aplicate optimizările ale bateriei, notificarea de ascultare poate dispărea atunci când este întreruptă.</string>
     <string name="is_android12">Pe Android 12 sau mai nou, dezactivarea optimizărilor bateriei este necesară pentru ca opțiunea \"Serviciu invincibil\" să aibă efect.</string>
     <string name="ignore_battery_optimizations">Ignoră optimizările bateriei</string>
@@ -131,11 +131,11 @@
     <string name="unsynchronized_lyrics">versurile nesincronizate</string>
     <string name="synchronized_lyrics">versurile sincronizate</string>
     <string name="provided_by">Furnizat de</string>
-    <string name="cleanup">🧹 CURĂȚENIE</string>
+    <string name="cleanup">CURĂȚENIE</string>
     <string name="delete_playback_events">Ștergeți %1$s evenimente de ascultare</string>
     <string name="existing_data_will_be_overwritten">Datele existente vor fi suprascrise.\n%1$s se va închide automat după restabilirea bazei de date.</string>
     <string name="on_queue">în coadă</string>
-    <string name="folder_cache">📁 CACHE FOLDER</string>
+    <string name="folder_cache">CACHE FOLDER</string>
     <string name="cache_reset_by_clicking_button">Atenție! Făcând clic pe butonul de mai jos, folderul cache va fi resetat!</string>
     <string name="cache_location_folder">Locație folder</string>
     <string name="custom_cache_from_android_10_may_not_be_available">Pe Android 10 sau mai nou, această funcție poate să nu fie disponibilă</string>
@@ -152,7 +152,7 @@
     <string name="error_this_song_cannot_be_played_due_to_server_restrictions">Această melodie nu poate fi redată din cauza restricțiilor serverilor</string>
     <string name="error_the_returned_video_id_doesn_t_match_the_requested_one">ID-ul videoclipului întors nu se potrivește cu cel solicitat</string>
     <string name="error_an_unknown_playback_error_has_occurred">A apărut o eroare de ascultare necunoscută</string>
-    <string name="tips">✨ Recomandări</string>
+    <string name="tips">Recomandări</string>
     <string name="quick_pics_and_tips">Recomandări și Selecții rapide</string>
     <string name="is_min_list_time_for_tips_or_quick_pics">Este timpul minim de ascultat pentru a include melodia ca Sfat sau Selecție rapidă</string>
     <string name="min_listening_time">Timp minim de ascultare</string>
@@ -161,13 +161,13 @@
     <string name="size_name">Dimensiune</string>
     <string name="current_size_name">"Dimensiunea curentă "</string>
     <string name="current_shape_name">Formă curentă</string>
-    <string name="small">Mic ◾</string>
-    <string name="medium">Mediu ◼️</string>
-    <string name="big">Mare ⬛</string>
-    <string name="none">Nici unul ❌</string>
-    <string name="light">Leger ◾</string>
-    <string name="heavy">Mare ⬛</string>
-    <string name="effects">✨ EFECTE</string>
+    <string name="small">Mic</string>
+    <string name="medium">Mediu </string>
+    <string name="big">Mare</string>
+    <string name="none">Nici unul</string>
+    <string name="light">Leger</string>
+    <string name="heavy">Mare</string>
+    <string name="effects">EFECTE</string>
     <string name="player_rotating_buttons">Butoane rotative</string>
     <string name="player_enable_rotation_buttons">Activați rotația butoanelor când se face clic pe ele</string>
     <string name="statistics">Statistici</string>
@@ -178,16 +178,16 @@
     <string name="_6_month">6 Luni</string>
     <string name="_1_year">Un An</string>
     <string name="all">Total</string>
-    <string name="most_played_songs">🎵 Melodiile cele mai ascultate</string>
-    <string name="most_listened_artists">👥 Artiști cei mai ascultați</string>
-    <string name="most_albums_listened">💿 Albumurile cele mai ascultate</string>
-    <string name="most_played_playlists">🔁 Listele cele mai ascultate</string>
-    <string name="languages">🌍 LIMBĂ</string>
+    <string name="most_played_songs">Melodiile cele mai ascultate</string>
+    <string name="most_listened_artists">Artiști cei mai ascultați</string>
+    <string name="most_albums_listened">Albumurile cele mai ascultate</string>
+    <string name="most_played_playlists">Listele cele mai ascultate</string>
+    <string name="languages">LIMBĂ</string>
     <string name="app_language">Limba aplicației</string>
     <string name="in_alphabetical_order">In ordinea alfabetică:</string>
-    <string name="contributors">🤝 CONTRIBUITORI</string>
-    <string name="troubleshooting">🔧 DEPANARE</string>
-    <string name="social">💬 SOCIAL</string>
+    <string name="contributors">CONTRIBUITORI</string>
+    <string name="troubleshooting">DEPANARE</string>
+    <string name="social">SOCIAL</string>
     <string name="english">Engleză (English) 🇺🇸</string>
     <string name="italian">Italiană (Italiano) 🇮🇹</string>
     <string name="czech">Cehă (Čeština) 🇨🇿</string>
@@ -198,25 +198,25 @@
     <string name="russian">Rusă (Русский) 🇷🇺</string>
     <string name="turkish">Turcă (Türkçe) 🇹🇷</string>
     <string name="polish">Poloneză (Polski) 🇵🇱</string>
-    <string name="dark">Intunecat ⚫</string>
-    <string name="system">Sistem ⚙️</string>
+    <string name="dark">Intunecat</string>
+    <string name="system">Sistem</string>
     <string name="unlimited">Nelimitat</string>
-    <string name="_light">Luminos ⚪</string>
+    <string name="_light">Luminos</string>
     <string name="downloaded">Descărcate</string>
     <string name="turn_off">Opriți</string>
     <string name="download">Descarcă</string>
-    <string name="_default">Implicit ▶️</string>
-    <string name="dynamic">Dinamic 🎵</string>
+    <string name="_default">Implicit</string>
+    <string name="dynamic">Dinamic</string>
     <string name="discovery">Descoperiri</string>
     <string name="mood">Stare</string>
-    <string name="new_albums">🆕 Albumuri noi</string>
-    <string name="moods_and_genres">😁 Stare și Genuri</string>
+    <string name="new_albums">Albumuri noi</string>
+    <string name="moods_and_genres">Stare și Genuri</string>
     <string name="search_queries">" căutare"</string>
     <string name="not_find_battery_optimization_settings">Nu s-au putut găsi setările de optimizare al bateriei, vă rugăm să adăugați manual în lista albă</string>
     <string name="search">Caută...</string>
     <string name="no">Nu</string>
     <string name="stop">Stop</string>
-    <string name="preferences">💖 PREFERINȚE</string>
+    <string name="preferences">PREFERINȚE</string>
     <string name="it_seems_that_youtube_music_is_not_installed">YouTube Music nu este instalat!</string>
     <string name="listen_on_youtube">Ascultă pe YouTube</string>
     <string name="listen_on_youtube_music">Ascultă pe YouTube Music</string>
@@ -229,19 +229,19 @@
     <string name="toggle_lyrics">Arată versurile</string>
     <string name="by_tapping_on_the_thumbnail">Atingând miniatura</string>
     <string name="require_mic_permission">Visualisatorul necesită permisiunea microfonului, acordațil vă rog.</string>
-    <string name="vt_fancy">Fancy</string>
+    <string name="vt_fancy">Frumos</string>
     <string name="vt_circular">Circular</string>
-    <string name="vt_disabled">Disabled</string>
-    <string name="vt_stacked">Stacked</string>
-    <string name="vt_one_side">One side</string>
-    <string name="vt_double_side">Double side</string>
-    <string name="vt_double_side_circular">Double side circular</string>
-    <string name="vt_full">Full</string>
-    <string name="new_albums_of_your_artists">New albums of your artists</string>
-    <string name="timeline">Timeline</string>
-    <string name="song_cache_by_player">SONG CACHE (by Player)</string>
-    <string name="song_cache_by_download">SONG CACHE (by Download)</string>
-    <string name="visualizer">Visualizer</string>
-    <string name="visualizer_require_mic_permission">Visualizer REQUIRE MIC PERMISSION</string>
-    <string name="restart_app_please">Restart app please.</string>
+    <string name="vt_disabled">Dezactivat</string>
+    <string name="vt_stacked">Stivuite</string>
+    <string name="vt_one_side">O față</string>
+    <string name="vt_double_side">Față dublă</string>
+    <string name="vt_double_side_circular">Circular cu două fețe</string>
+    <string name="vt_full">Plin</string>
+    <string name="new_albums_of_your_artists">Albume noi ale artiștilor tăi</string>
+    <string name="timeline">Bara de navigare</string>
+    <string name="song_cache_by_player">CACHE Musici (Automatic)</string>
+    <string name="song_cache_by_download">CACHE Musici (Instalate)</string>
+    <string name="visualizer">Visualizator</string>
+    <string name="visualizer_require_mic_permission">Visualizatorul necesita permisiunea microfonului</string>
+    <string name="restart_app_please">Reporniți aplicația vă rog.</string>
 </resources>
