Updated Romanian with Emojies
Updated Romanian with Emojies

--- a/app/src/main/res/values-ro-rRO/strings.xml
+++ b/app/src/main/res/values-ro-rRO/strings.xml
@@ -205,7 +205,7 @@
     <string name="downloaded">Descărcate</string>
     <string name="turn_off">Opriți</string>
     <string name="download">Descarcă</string>
-    <string name="_default">Implicit ▶️</string>
+    <string name="_default">Implicit ➖</string>
     <string name="dynamic">Dinamic 🎵</string>
     <string name="discovery">Descoperiri</string>
     <string name="mood">Stare</string>
@@ -223,25 +223,25 @@
     <string name="on_device">În dispozitiv</string>
     <string name="open_settings">Deschide setările</string>
     <string name="permission_declined_grant_media_permissions">Permisiune refuzată, vă rugăm să acordați permisiunile media în setările dispozitivului dvs.</string>
-    <string name="wavy_timeline">Bară de progres ondulată</string>
+    <string name="wavy_timeline">Bară de progres ondulată 〰️</string>
     <string name="enable_wavy_timeline">Utilizează bară de progres ondulată</string>
     <string name="play_next">Ascultă după</string>
     <string name="toggle_lyrics">Arată versurile</string>
     <string name="by_tapping_on_the_thumbnail">Atingând miniatura</string>
     <string name="require_mic_permission">Visualisatorul necesită permisiunea microfonului, acordațil vă rog.</string>
-    <string name="vt_fancy">Fancy</string>
-    <string name="vt_circular">Circular</string>
-    <string name="vt_disabled">Disabled</string>
-    <string name="vt_stacked">Stacked</string>
-    <string name="vt_one_side">One side</string>
-    <string name="vt_double_side">Double side</string>
-    <string name="vt_double_side_circular">Double side circular</string>
-    <string name="vt_full">Full</string>
-    <string name="new_albums_of_your_artists">New albums of your artists</string>
-    <string name="timeline">Timeline</string>
-    <string name="song_cache_by_player">SONG CACHE (by Player)</string>
-    <string name="song_cache_by_download">SONG CACHE (by Download)</string>
-    <string name="visualizer">Visualizer</string>
-    <string name="visualizer_require_mic_permission">Visualizer REQUIRE MIC PERMISSION</string>
-    <string name="restart_app_please">Restart app please.</string>
+    <string name="vt_fancy">Frumos ✨</string>
+    <string name="vt_circular">Circular ⭕</string>
+    <string name="vt_disabled">Dezactivat ❌</string>
+    <string name="vt_stacked">Stivuite 📚</string>
+    <string name="vt_one_side">O față ➡️</string>
+    <string name="vt_double_side">Față dublă ↔️</string>
+    <string name="vt_double_side_circular">Circular cu două fețe 🔄️</string>
+    <string name="vt_full">Plin ⬛</string>
+    <string name="new_albums_of_your_artists">🆕 Albume noi ale artiștilor tăi</string>
+    <string name="timeline">Bara de navigare</string>
+    <string name="song_cache_by_player">▶️ CACHE Musici (Automatic)</string>
+    <string name="song_cache_by_download">⬇️ CACHE Musici (Instalate)</string>
+    <string name="visualizer">Visualizator</string>
+    <string name="visualizer_require_mic_permission">Visualizatorul necesita permisiunea microfonului</string>
+    <string name="restart_app_please">Reporniți aplicația vă rog.</string>
 </resources>
