--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -16,7 +16,7 @@
     <string name="hide_from_quick_picks">Ascunde din \"Selecții rapide\"</string>
     <string name="related_albums">Albume similare</string>
     <string name="similar_artists">Artiști similari</string>
-    <string name="playlists_you_might_like">Liste de ascultare care ți-ar putea plăcea</string>
+    <string name="playlists_you_might_like">Liste care ți-ar putea plăcea</string>
     <string name="an_error_has_occurred">A apărut o eroare</string>
     <string name="albums">Albume</string>
     <string name="artists">Artiști</string>
