Add untranslated listen on Piped and Invidious to all strings.xml

--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -244,4 +244,6 @@
     <string name="visualizer">Visualiseur</string>
     <string name="visualizer_require_mic_permission">Visualiseur exige L\'AUTORISATION DU MICRO</string>
     <string name="restart_app_please">🔃 Redémarrez l\'application</string>
+    <string name="listen_on_piped">Listen on Piped</string>
+    <string name="listen_on_invidious">Listen on Invidious</string>
 </resources>
