--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -244,4 +244,6 @@
     <string name="visualizer">Visualizador</string>
     <string name="visualizer_require_mic_permission">El visualizador REQUIERE EL PERMISO DE MICRÓFONO</string>
     <string name="restart_app_please">Por favor, reinicia la aplicación.</string>
+    <string name="listen_on_piped">Listen on Piped</string>
+    <string name="listen_on_invidious">Listen on Invidious</string>
 </resources>
