Implemented ViMusic Original Styles and UI interface #174

--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -246,4 +246,9 @@
     <string name="restart_app_please">🔃 Redémarrez l\'application</string>
     <string name="listen_on_piped">Listen on Piped</string>
     <string name="listen_on_invidious">Listen on Invidious</string>
+    <string name="disable_horizontal_swipe">Disable horizontal swipe</string>
+    <string name="disable_song_switching_via_swipe">Disable song switching via swipe</string>
+    <string name="interface_in_use">Interface in use</string>
+    <string name="user_interface">User interface</string>
+    <string name="ui_tab">UI</string>
 </resources>
